# msscf_2_13

./: .gitattributes  ArchiveSourceCF213.bash  LICENSE  PackageDocumentation213.bash  README.md  mssprop-1.0.txt
cplus/: .gitignore  BuildMssCFCli-wsl.bash  CleanMssCFCli-wsl.bash  InstallMssCFCli-wsl.bash  PackageMssCFCliWsl213.bash
cplus/msscfcli/: .gitignore  ChangeLog  Makefile.am  configure.ac  msscfcli.cpp
java/: .gitignore  ChangeLog  LICENSE  PackageCF213.bash  RefreshBinJars213.bash  build.xml
java/cfcli/src/org.msscf.msscf.CFCli/: module-info.java
java/cfcli/src/org.msscf.msscf.CFCli/org/msscf/msscf/CFCli/: CFCli.java
java/org.msscf.msscf.v2_13.CFCli/: pom.xml
java/org.msscf.msscf.v2_13.CFCli/src/main/java/org/msscf/msscf/v2_13/CFCli/: CFCli.java
