AC_INIT([msobkow MSS Code Factory],2.13.11182,[msobkow@sasktel.net],[libmsscfcli],[http://msobkow.github.com/])
AC_COPYRIGHT([Copyright (c) 2020 Mark Stephen Sobkow])
AC_REVISION(2.13.11182)
AM_INIT_AUTOMAKE([foreign])
AC_PROG_CXX()
LT_INIT([shared])
AC_DISABLE_STATIC
AC_CONFIG_FILES([
	Makefile
])
AC_CONFIG_MACRO_DIRS([m4])
AC_OUTPUT
